<resources>
    <string name="app_name">Midproject1412171</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_ar">Augmented reality</string>
    <string name="nav_share">Share</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_scan">Scan phone number</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Map</item>
        <item>AR</item>
        <item>Share</item>
        <item>Favorites</item>
        <item>Settings</item>
        <item>Scan phone number</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_change_radius">Change radius</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="sign_out">Sign out</string>
    <string name="app_description">Food Adviser</string>
    <string name="app_author">Author - Tran Phuoc Hien</string>
    <string name="author_Info">Trần Phước Hiền-1412171 | Lê Đình Hân-1412153</string>
    <string name="aboutus_description">FoodAdvisor helps people who know what they want to eat. We guide them to the best restaurant or cafe to visit at their preferred area. Another reason which makes us unique is our listings are curated via a rating system by local food lovers who visit our domain</string>
    <string name="title_activity_map_view">Map</string>


    <!-- Emotion subscription key -->
    <!-- Please refer to https://www.projectoxford.ai/ to get your subscription key -->
    <!-- If you have one subscription key, you can add it here to use the service -->
    <string name="subscription_key">29680f0950744c08b8625248042d9203</string>


    <!-- Face subscription key -->
    <!-- Please refer to http://oxford-portal.azurewebsites.net/doc/general/subscription-key-mgmt to get your subscription key -->
    <!-- Please note that the Emotion API and Face API have different subscription keys -->
    <!-- You will need Face subscription key, besides the Emotion subscription keys, for the second part of the sample to work -->
    <string name="faceSubscription_key">da33d25f58934c2a891e715538852d2d</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">494718943139-rjk3jtvhmgconepi3lv9l3pbgg4623hc.apps.googleusercontent.com</string>

    <!-- Display strings -->
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your two subscription keys for Emotion API/Face API to source file \"app/res/values/strings.xml\" to enable Emotion API and Face API calls.</string>
    <string name="title_activity_analyze">AnalyzeActivity</string>
    <string name="title_activity_recognize">RecognizeActivity</string>
    <string name="title_activity_thumbnail">ThumbnailActivity</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="str_atv_places">Enter Place Here</string>
</resources>

