<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_ar"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_ar" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scanning"
            android:title="@string/nav_scan" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
