<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tphien.midproject1412171.SignoutActivity">
    <TextView
        android:id="@+id/status"
        android:text="@string/signed_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:onClick="onClickSignOut"
        android:layout_width="wrap_content" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/disconnect"
        android:onClick="onClickDisconnect"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Firebase User ID: 123456789abc" />
</LinearLayout>
